Corrigido bug com text-align na table

--- a/modulo1/css-bugfixes/index.css
+++ b/modulo1/css-bugfixes/index.css
@@ -101,6 +101,7 @@ div:last-child {
 }
 
 table {
+    text-align: center;
     width: 60%;
 }
 
